tests/fixtures/failing/std_result_complex.wm
from "std/result" import { Result, Ok, Err, map, mapError, andThen, withDefault, fold };

let inc = (n) => { add(n, 1) };
let doubleIfOdd = (n) => {
  match(cmpInt(sub(n, mul(div(n, 2), 2)), 0)) {
    EQ => { Err("even") },
    _ => { Ok(add(n, n)) }
  }
};

let strErr = (e) => { e };

export let pipeline = () => {
  let start = Ok(10);
  let mapped = map((inc, start));
  let chained = andThen((doubleIfOdd, mapped));
  withDefault((0, chained))
};

export let foldBoth = () => {
  let start = Err("boom");
  fold(((e) => { 0 }, (v) => { add(v, 1) }, start))
};
